fix: List.of()需coreLibraryDesugaring，改用Collections.singletonList避免NoSuchMethodError